--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ div.divider {
 div#basics {
   background-color: #bbbbbb;
   padding:          0.5em;
+  box-shadow: 0px 10px 15px -10px #000;
 }
 
 div.itemtitle {
@@ -40,4 +41,22 @@ div.itembody {
 
 div.itembody table {
   width:            100%;
+}
+
+td.section-heading {
+  font-weight: bold;
+  width: 100%;
+  box-shadow: 1px 1px 2px 1px #333;
+  background: #ddd;
+  text-align: center;
+}
+
+td.section-heading:hover{
+  box-shadow: -1px -1px 2px 1px #333;
+  cursor: pointer;
+  background: #ccc;
+}
+
+body .bold {
+  font-weight: bold;
 }
